--- a/phen375.html
+++ b/phen375.html
@@ -2,7 +2,7 @@
 <html amp lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Gift Cards</title>
+    <title>Phen375 - New Appetite Suppressants</title>
     <link rel="canonical" href="http://example.ampproject.org/article-metadata.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
