--- a/phen375.html
+++ b/phen375.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Phen375 - New Appetite Suppressants</title>
-    <link rel="canonical" href="http://example.ampproject.org/article-metadata.html">
+    <link rel="canonical" href="https://newoffer.github.io/phen375.html">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
       {
@@ -52,8 +52,8 @@ font-size: 18pt;
 <center><table>
 	<tr>
 		<td> <center><h1>Phen375 - New Appetite Suppressants</h1><hr></center>
-<center><a href='http://trkur1.com/121063/30396?i=389908' target="_blank" rel="nofollow"><amp-img src='http://pixxur.com/121063/389908-300x250.jpg' height="250" width="300" /></amp-img></a>
-	</center>	<br><p>Focusing on how appetite suppressing medications work will 
+<center><a href='http://trkur1.com/121063/30396?i=389908' target="_blank" rel="nofollow"><amp-img src='http://pixxur.com/121063/389908-300x250.jpg' height="250" width="300" /></amp-img></a></center>
+		<br><p>Focusing on how appetite suppressing medications work will 
 		definitely pay dividends as this allows us to totally grasp their 
 		functioning system and also understand how to efficiently incorporate 
 		them into the weight loss programs.<br>
