--- a/amp.html
+++ b/amp.html
@@ -44,7 +44,7 @@
 <style amp-custom="">
   /* any custom style goes here */
   body {
-   background-image:url(/bg.gif);
+   background-image:url(https://www.abv.pp.ua/bg.gif);
   }
   table {
     width: 80%; /* Ширина таблицы */
