--- a/amp.html
+++ b/amp.html
@@ -54,7 +54,7 @@
    td {
     background: #FFFFFF; /* Цвет фона */
     border: 1px solid #339966; /* Граница вокруг ячеек */
-    padding: 8px; /* Поля в ячейках */ 
+    padding: 16px; /* Поля в ячейках */ 
    }
   amp-img {
 
@@ -76,8 +76,8 @@ font-size: 18pt;
 	<tr>
 		<td><amp-img src="/remont-televizorov.png" alt="ремонт телевизоров Херсон" height="60" width="320" ></amp-img>
 		<h1>Ремонт телевизоров в Херсоне на дому</font></h1> <br>
-		<p>Телемастер 095-008-9193<br>
-		Ремонтируются телевизоры кинескопной конструкции
+		<p>
+		Ремонтируются телевизоры только кинескопной конструкции
 		(объёмная коробка сзади)</p>
 		<center><amp-img src="/remont-televizorov-herson.png" alt="ремонт телевизоров в Херсоне" height="214" width="235" ></amp-img></center><br>
 		<p>любых фирм производителей.<br />Телемастер производит 
@@ -90,14 +90,17 @@ font-size: 18pt;
 						телемастеру, скажите название телевизора, опишите 
 						неисправность, например (телевизор не включается), адрес 
 						и удобное для Вас время прихода мастера.<br />
-						<amp-img src="/images/phone.png" alt="телемастер Херсон"  width="13" height="30"></amp-img>
-						&nbsp;095 008 9193 звонить с 9 до 20ч.</p>
+						Если у вас неисправен кинескопный телевизор
+ <br></br>
+<a href="tel:+380950089193">☎ 095-008-9193 для звонка нажмите здесь</a><br>
+</br>
+Звонить с 9 до 20ч.						
 						<br>
 <h2>
 Ремонт телевизоров Херсон</h2><br>
 LG, TOSHIBA, PANASONIC, DAEWOO, RAINFORD, VESTEL, WEST, 
 						PHILIPS<br>
-<a href="https://telemaster.pp.ua">Ремонт телевизоров в Херсоне на дому</a>
+<a href="https://www.telemaster.pp.ua">Ремонт телевизоров в Херсоне на дому</a>
 		</td>
 	</tr>
 </table></center>
