--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ font-size: 18pt;
     <center><table>
 	<tr>
 		<td><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="60" width="360" ></amp-img>
-		<h1>Ремонт телевизоров в Херсоне на дому</font></h1> <br>
+		<hr><h1>Ремонт телевизоров в Херсоне на дому</font></h1><hr> <br>
 		<p>
 		Ремонтируются телевизоры только кинескопной конструкции
 		(объёмная коробка сзади)</p>
