--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ font-size: 18pt;
   <body>
     <center><table>
 	<tr>
-		<td><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="60" width="360" ></amp-img>
+		<td><a href="https://www.telemaster.pp.ua"><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="60" width="360" ></amp-img></a>
 		<hr><h1>Ремонт телевизоров в Херсоне на дому</font></h1><hr> <br>
 		<p>
 		Ремонтируются телевизоры только кинескопной конструкции
@@ -98,10 +98,23 @@ font-size: 18pt;
 						<br>
 <h2>
 Ремонт телевизоров Херсон</h2><br>
-LG, TOSHIBA, PANASONIC, DAEWOO, RAINFORD, VESTEL, WEST, 
-						PHILIPS<br>
+<p>LG - ЭЛДЖИ, TOSHIBA - Тошиба, PANASONIC - Панасоник, DAEWOO - Дэу, RAINFORD - Рэйнфорд, VESTEL - Вестел, 
+WEST - Вест, PHILIPS - Филипс, Samsung - Самсунг, TLC - ТЛСИ, JVC - ДжиВиСи, Sharp - Шарп, Thomson - Томсон<br></p>
 <h2>Телемастер Херсон</h2>
-<a href="https://www.telemaster.pp.ua">Ремонт телевизоров в Херсоне на дому</a>
+<p>Наиболее распространенные неисправности кинескопных телевизоров:<br>
+На экране <a href="https://www.telemaster.pp.ua/pyatna.html">разноцветные пятна</a>, цветовые разводы.<br>
+Нет изображении, посредине экрана тонкая вертикальная полоса.<br>
+Экран светится ярким цветом красным, синим или зелёным, изображения не видно.<br>
+На изображении преобладает один цвет.<br>
+Телевизор не включается, пытается включиться, из него исходят скрипящие повторяющиеся звуки.<br>
+По центру экрана тонкая горизонтальная полоса.<br>
+Экран заужен сверху или снизу.<br>
+Повышенная яркость изображения, поверх которого просматриваются тонкие горизонтальные полосы.<br>
+Телевизор не включается светодиод не загорается.<br>
+Телевизор не включается из дежурного режима.<br>
+У телевизора при работе исчезает изображение, остаётся звук.<br>
+При включении телевизора слышен громкий треск электрических разрядов.<br> 
+<a href="https://www.telemaster.pp.ua/rokot.html">Рокот из динамиков телевизора</a> <br> </p>
 		</td>
 	</tr>
 </table></center>
