--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ font-size: 18pt;
 						<br>
 <h2>
 Ремонт телевизоров Херсон</h2><br>
-<p>LG - ЭЛДЖИ, TOSHIBA - Тошиба, PANASONIC - Панасоник, DAEWOO - Дэу, RAINFORD - Рэйнфорд, VESTEL - Вестел, 
+<p>LG - ЭЛЖИ, TOSHIBA - Тошиба, PANASONIC - Панасоник, DAEWOO - Дэу, RAINFORD - Рэйнфорд, VESTEL - Вестел, 
 WEST - Вест, PHILIPS - Филипс, Samsung - Самсунг, TLC - ТЛСИ, JVC - ДжиВиСи, Sharp - Шарп, Thomson - Томсон<br></p>
 <h2>Телемастер Херсон</h2>
 <p>Наиболее распространенные неисправности кинескопных телевизоров:<br>
