--- a/rokot.html
+++ b/rokot.html
@@ -71,7 +71,7 @@ font-size: 18pt;
    }
 </style>
   </head>
-  <body oncopy="return false;">
+  <body>
     <center><table>
 	<tr>
 		<td><a href="https://www.telemaster.pp.ua"><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="60" width="360" ></amp-img></a>
