--- a/pyatna.html
+++ b/pyatna.html
@@ -7,7 +7,7 @@
 <meta name="keywords" content="">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://www.telemaster.pp.ua/pyatna.html">
-   <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+   <meta name="viewport" content="width=device-width">
     <script type="application/ld+json">
     {
     "@context": "http://schema.org",
