--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     "image": {
         "@type": "ImageObject",
         "url": "https://www.telemaster.pp.ua/remont-televizorov-herson.jpg",
-        "width": 1052,
-        "height": 789
+        "width": 1200,
+        "height": 960
     }
 }
 </script>
@@ -74,12 +74,12 @@ font-size: 18pt;
   <body>
     <center><table>
 	<tr>
-		<td><a href="https://www.telemaster.pp.ua"><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="60" width="360" ></amp-img></a>
+		<td><a href="https://www.telemaster.pp.ua"><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="61" width="340" ></amp-img></a>
 		<hr><h1>Ремонт телевизоров в Херсоне на дому</font></h1><hr> <br>
 		<p>
 		Ремонтируются телевизоры только кинескопной конструкции
 		(объёмная коробка сзади)</p>
-		<center><amp-img src="/remont-televizorov-herson.jpg" alt="ремонт телевизоров в Херсоне" height="255" width="340" ></amp-img></center><br>
+		<center><amp-img src="/remont-televizorov-herson.png" alt="ремонт телевизоров в Херсоне" height="272" width="340" ></amp-img></center><br>
 		<p>любых фирм производителей.<br />Телемастер производит 
 						ремонт телевизоров во всех районах города Херсона 
 						(Центр, ХБК, Таврический, Шуменский, Жилпоселок, 
