--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html amp lang="ru">
   <head>
     <meta charset="utf-8">
-   <title>Ремонт телевизоров в Херсоне на дому Телемастер</title>
-<Meta name="description" Content="Ремонт кинескопных телевизоров в Херсоне выполняется во всех районах города. Ремонтируются кинескопные телевизоры любых фирм производителей.">
+   <title>Ремонт телевизоров в городе Херсон на дому Телемастер</title>
+<Meta name="description" Content="Ремонт кинескопных телевизоров в городе Херсон, производится во всех районах города. Ремонтируются на дому кинескопные телевизоры любых фирм производителей.">
 <meta name="keywords" content="телемастер Херсон, Ремонт телевизоров в Херсоне, Ремонт телевизоров Херсон, Ремонт телевизоров в Херсоне на дому ">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://www.telemaster.pp.ua/">
@@ -74,14 +74,14 @@ font-size: 18pt;
   <body>
     <center><table>
 	<tr>
-		<td><a href="https://www.telemaster.pp.ua"><amp-img src="/remont-televizorov.png" alt="telemaster.pp.ua ремонт телевизоров Херсон" height="61" width="340" ></amp-img></a>
-		<hr><h1>Ремонт телевизоров в Херсоне на дому</font></h1><hr> <br>
+		<td><a href="https://www.telemaster.pp.ua"><amp-img src="/remont-televizorov.png" alt="ремонт телевизоров Херсон" height="61" width="340" ></amp-img></a>
+		<hr><h1>Ремонт телевизоров Херсон</font></h1><hr> <br>
 		<p>
-		Ремонтируются телевизоры только кинескопной конструкции
+		Ремонтируются телевизоры на дому, только кинескопной конструкции
 		(объёмная коробка сзади)</p>
 		<center><amp-img src="/remont-televizorov-herson.png" alt="ремонт телевизоров в Херсоне" height="308" width="340" ></amp-img></center><br>
 		<p>любых фирм производителей.<br />Телемастер производит 
-						ремонт телевизоров во всех районах города Херсона 
+						ремонт телевизоров во всех районах города Херсон 
 						(Центр, ХБК, Таврический, Шуменский, Жилпоселок, 
 						Остров).<br />Ремонт производится на дому у заказчика, 
 						быстро и качественно, по умеренным расценкам. <br />
@@ -97,7 +97,7 @@ font-size: 18pt;
 Звонить с 9 до 20ч.						
 						<br>
 <h2>
-Ремонт телевизоров Херсон</h2><br>
+Ремонт телевизоров в Херсоне на дому</h2><br>
 <p>LG - ЭЛЖИ, TOSHIBA - Тошиба, PANASONIC - Панасоник, DAEWOO - Дэу, RAINFORD - Рэйнфорд, VESTEL - Вестел, 
 WEST - Вест, PHILIPS - Филипс, Samsung - Самсунг, TLC - ТЛСИ, JVC - ДжиВиСи, Sharp - Шарп, Thomson - Томсон<br></p>
 <h2>Телемастер Херсон</h2>
