--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <style amp-custom="">
   /* any custom style goes here */
   body {
-   background-image:url(https://www.telemaster.pp.ua/bg.gif);
+   background-image:url(https://www.remont-televizorov-kherson.pp.ua/bg.gif);
   }
   table {
     width: 80%; /* Ширина таблицы */
