--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html amp lang="ru">
   <head>
-	  <meta http-equiv="Refresh" content="0; https://sites.google.com/site/remonttelevizorovhersone/">
+	  <meta http-equiv="Refresh" content="0; https://www.telemaster.pp.ua/">
     <meta charset="utf-8">
    <title>Ремонт телевизоров в городе Херсон на дому Телемастер</title>
 <Meta name="description" Content="Ремонт кинескопных телевизоров в городе Херсон, производится во всех районах города. Ремонтируются на дому кинескопные телевизоры любых фирм производителей.">
