--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-209.127.191.180:9279:oixvhewh:xj7o5kt0wxtt
-45.95.96.187:8746:oixvhewh:xj7o5kt0wxtt
-45.95.96.237:8796:oixvhewh:xj7o5kt0wxtt
-45.95.96.132:8691:oixvhewh:xj7o5kt0wxtt
-45.136.228.154:6209:oixvhewh:xj7o5kt0wxtt
-45.94.47.66:8110:oixvhewh:xj7o5kt0wxtt
-45.94.47.108:8152:oixvhewh:xj7o5kt0wxtt
-193.8.56.119:9183:oixvhewh:xj7o5kt0wxtt
-45.95.99.226:7786:oixvhewh:xj7o5kt0wxtt
-45.95.99.20:7580:oixvhewh:xj7o5kt0wxtt
+text
