--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Ремонт Телевизоров в Херсоне на Дому. Телемастер</title>
+<title></title>
 <Meta name="description" Content="Ремонт телевизоров в Херсоне. Ремонт телевизоров производится во всех районах Херсона. Телемастер ремонтирует кинескопные телевизоры любых фирм производителей." />
 <meta name="keywords" content="Ремонт телевизоров в Херсоне, Ремонт телевизоров Херсон, Ремонт телевизоров в Херсоне на дому, телемастер Херсон " />
 <link rel="canonical" href="https://www.telemaster.pp.ua/">
@@ -41,72 +41,8 @@ font-size: 18pt;
 </head>
 
 <body oncopy="return false;">
-<table align="center">
-	<tr>
-		<td>
-						<img src="telemaster.jpg" width="654" height="130" alt="ремонт телевизоров Херсон" />
-						<h1>Ремонт телевизоров в Херсоне</h1> 
-<p> 
-<span style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none; background-color: rgb(255, 255, 255)">
-<font size="5">Ремонтируются телевизоры на дому, только кинескопной конструкции 
-(объёмная коробка сзади)</font></span></p><center>
-<img src="remont-televizorov-herson.png" alt="ремонт телевизоров в Херсоне"/></center>
-						<p>любых фирм производителей.<br />Телемастер производит 
-						ремонт телевизоров во всех районах города Херсона 
-						(Центр, ХБК, Таврический, Шуменский, Жилпоселок, 
-						Остров).<br />Ремонт производится на дому у заказчика, 
-						быстро и качественно, по умеренным расценкам. <br />
-						Мастер имеет стаж работы в телеателье.<br />Чтобы 
-						сделать заказ на ремонт телевизора, позвоните 
-						телемастеру, скажите название телевизора, опишите 
-						неисправность, например (телевизор не включается), адрес 
-						и удобное для Вас время прихода мастера.<br />
-Если у вас неисправен кинескопный телевизор <br>
-						 <br></br>
-<a href="tel:+380950089193">☎ 095-008-9193 для звонка нажмите здесь</a><br>
-</br> 
-
-						&nbsp; звонить с 9 до 20ч. 
-						</p>
-<h2>Ремонт телевизоров Херсон</h2>
-						<p>
-						<span style="color: rgb(0, 0, 0); font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 18.6667px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-						LG - ЭЛЖИ, TOSHIBA - Тошиба, PANASONIC - Панасоник, 
-						DAEWOO - Дэу, RAINFORD - Рэйнфорд, VESTEL - Вестел, WEST 
-						- Вест, PHILIPS - Филипс, Samsung - Самсунг, TLC - ТЛСИ, 
-						JVC - ДжиВиСи, Sharp - Шарп, Thomson - Томсон</span></p>
-						<h2>Телемастер Херсон</h2>
-<p><font size="4">Наиболее распространенные неисправности кинескопных телевизоров:<br>
-На экране <a href="https://www.telemaster.pp.ua/pyatna.html">разноцветные пятна</a>, цветовые разводы.<br>
-Нет изображения, посредине экрана тонкая вертикальная полоса.<br>
-Экран светится ярким цветом красным, синим или зелёным, изображения не видно.<br>
-На изображении преобладает один цвет.<br>
-Телевизор не включается, пытается включиться, из него исходят скрипящие повторяющиеся звуки.<br>
-По центру экрана тонкая горизонтальная полоса.<br>
-Экран заужен сверху или снизу.<br>
-Повышенная яркость изображения, поверх которого просматриваются тонкие горизонтальные полосы.<br>
-Телевизор не включается светодиод не загорается.<br>
-Телевизор не включается из дежурного режима.<br>
-У телевизора при работе исчезает изображение, остаётся звук.<br>
-При включении телевизора слышен громкий треск электрических разрядов.<br> 
-<a href="https://www.telemaster.pp.ua/rokot.html">Рокот из динамиков телевизора</a> <br> 
-</font> </p>
-<p><a href="https://www.facebook.com/remonttelevizorovhersone"><font size="4">Facebook</font></a></p>
-<p><a href="https://twitter.com/remont_kherson"><font size="4">Twitter</font></a></p>
-<p><a href="https://www.pinterest.com/pin/386324474285115622/"><font size="4">Pinterest</font></a></p>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-418681-33"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-418681-33');
-</script>
-
-				</td>
-	</tr>
-</table>
+<p>
+<a href="https://www.buying.trade/instant-same-day-payday-loans-online-in-california.html">
+page</a></p>
 </body>
 </html>
