--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ text-align: center
 		<tr>
 			<td><p><h1>Instant same day payday loans online California</h1>
 			<p><a href="https://loansolo.com/?aid=7378">
-			<img src="../../загрузки24/LoanSolo.com/300x250-loansolo-com.png" width="300" height="250" alt="loans online" class="center"></a></p>
+			<img src="/300x250-loansolo-com.png" width="300" height="250" alt="loans online" class="center"></a></p>
 			<p>		An online payday loan allows consumers to borrow up to $1000, 
 			depending on their state’s regulations and the consumer’s monthly 
 			income. Payday loans are designed to be short-term loans, helping 
