--- a/learn1.html
+++ b/learn1.html
@@ -4,8 +4,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <title>Новая страница 1</title>
-<link rel="stylesheet" href="style.css" media="screen" />
-<link rel="stylesheet" href="stylem.css" media="handheld" />
+<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
 
 <body>
@@ -18,7 +17,7 @@
 	Secured loans can be taken for a wide variety of purposes; in fact, any type 
 	of financial need can be fulfilled via a secured loan. Debt consolidation is 
 	one of the most popular reasons why people take a secured loan. <br>
-&nbsp;</div><hr>
+&nbsp;</div>
 
 <div id="parent">
   <div class="block">
@@ -30,13 +29,13 @@
 	Secured loans can be taken for a wide variety of purposes; in fact, any type 
 	of financial need can be fulfilled via a secured loan. Debt consolidation is 
 	one of the most popular reasons why people take a secured loan. <br>
-&nbsp;</div><hr>
+&nbsp;</div>
   <div class="block1">
     БлоDepending on the value of collateral offered the loan amount can range 
 	from Ј3,000 to Ј50,000. The lenders are not hesitant to offer a higher 
 	amount. If they are satisfied that the collateral is of a sufficiently high 
 	value, they can even consider lending Ј100,000 or more. <br>
-&nbsp;</div><hr>
+&nbsp;</div>
  
 </div>
 <div class="block0">
@@ -48,7 +47,7 @@
 	Secured loans can be taken for a wide variety of purposes; in fact, any type 
 	of financial need can be fulfilled via a secured loan. Debt consolidation is 
 	one of the most popular reasons why people take a secured loan. <br>
-&nbsp;</div><hr>
+&nbsp;</div>
 </body>
 
 </html>
