--- a/index.html
+++ b/index.html
@@ -1,113 +1,80 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta name="viewport" content="width=device-width" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-418681-48"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-418681-48');
+</script>
+ <meta name="viewport" content="width=device-width">
+<meta http-equiv="Content-Type" content="text/html;  charset=utf-8">
 <title>Instant Same Day Payday Loans Online California</title>
 <Meta name="description" Content="" />
 <meta name="keywords" content=" " />
 <link rel="canonical" href="https://www.loanonline.us/">
-<style>
-  table.style1 {
-    width: 100%; 
-    border: 0px solid #808080; /* Граница вокруг таблицы */
-   }
-  table.style2 {
-    width: 70%; 
-    border: 0px solid #808080; /* Граница вокруг таблицы */
-margin-left: auto;
-  margin-right: auto;
-   }
-   td.style3 {
-    background: #008000; /* Цвет фона */
-    border: 0px solid #339966; /* Граница вокруг ячеек */
-    padding: 0px; /* Поля в ячейках */ 
-   }
-   p {
-    font-family: Verdana, Arial, Helvetica, sans-serif; 
-    font-size: 16pt;
-   }
-   p.style4 {
-    font-family: Verdana, Arial, Helvetica, sans-serif; 
-    font-size: 32pt;
-color: #FFFFFF;
-text-align: center
-   }
-.center {
- display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-  </style>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-
-<table class="style1">
-	<tr>
-		<td class="style3">
-		<p class="style4"> Loans online</p></td>
-	</tr>
-</table>
-
-	<table class="style2">
-		<tr>
-			<td><p><h1>Instant same day payday loans online California</h1>
-			<p><a href="https://loansolo.com/?aid=7378">
-			<img src="/300x250-loansolo-com.png" width="300" height="250" alt="loans online" class="center"></a></p>
-			<p>		An online payday loan allows consumers to borrow up to $1000, 
-			depending on their state’s regulations and the consumer’s monthly 
-			income. Payday loans are designed to be short-term loans, helping 
-			complete a financial crisis until the next payday. Online payday 
-			loan companies add convenience to the process.<br>
-			<br>
-			PAYDAY LOAN Process<br>
-			<br>
-			Once you&#39;ve found an online payday loan company, you&#39;ll need to fill 
-			out an application that includes your contact information and 
-			monthly income. You will also need to work through a repayment plan. 
-			If you use a traditional payday loan store, you will need to create 
-			a postdated check that the lender supports. Payday loan companies 
-			will deduct the payment from your bank checking account 
-			automatically.<br>
-			<br>
-			When your application has been submitted and approved, you will 
-			receive your money advance. A traditional lender will issue you a 
-			check, while online companies line the cash to your bank checking 
-			account. Your repayment will be anticipated in the next short term, 
-			or you can prolong the loan for longer by paying additional fees.<br>
-			<br>
-			Payday Fees<br>
-			<br>
-			Payday loan lenders demand fees exactly like any financing company. 
-			Fees include a process cost and interest. To create comparability 
-			shopping easy, the federal government requires lenders to create an 
-			APR, which includes both fees and interest. This is actually the 
-			rate you&#39;ll pay if you kept the loan out for a whole year.<br>
-			<br>
-			If you compare the APR of an online payday loan to a home loan, you 
-			will notice an enormous difference. However, payday loans are only 
-			intended to be taken for a couple of days, which means that your 
-			actual fees will be lower. The APR is still a good way to compare 
-			payday companies to find the best package.<br>
-			<br>
-			Online Payday Loan Lenders<br>
-			<br>
-			Payday loan lenders follow yet guidelines as traditional lenders, 
-			however, they enable you to apply anytime for an advance loan. They 
-			also copy your cash electronically, which means you don’t have to 
-			hassle with assessments and vacations to the bank.<br>
-			<br>
-			Some online lenders also offer better discounts, especially for 
-			first-time borrowers. They could waive fees or offer reduced rates. 
-			It pays to look at several different websites to find the most 
-			affordable fees for your money advance.</p>
-			
-			</td>
-		</tr>
-	</table>
-
-
+<h1>Instant Same Day Payday Loans Online California</h1>
+<div id="parent">
+  <div class="block">
+    <a href="https://loansolo.com/?aid=7378"><img src="loansolo.png" width="300" height="250" alt="Instant Same Day Payday Loans Online California">
+	</a></div>
+  <div class="block1">
+    An online payday loan allows consumers to borrow up to $1000, depending on 
+	their state’s regulations and the consumer’s monthly income. Payday loans 
+	are designed to be short-term loans, helping complete a financial crisis 
+	until the next payday. Online payday loan companies add convenience to the 
+	process.<br>
+	<br>
+	PAYDAY LOAN Process <br>
+		<p><a href="https://loansolo.com/?aid=7378">Apply a Loan Online Click Here</a></p>
+	<br>
+	Once you&#39;ve found an online payday loan company, you&#39;ll need to fill out an 
+	application that includes your contact information and monthly income. You 
+	will also need to work through a repayment plan. If you use a traditional 
+	payday loan store, you will need to create a postdated check that the lender 
+	supports. Payday loan companies will deduct the payment from your bank 
+	checking account automatically.<br>
+	<br>
+	When your application has been submitted and approved, you will receive your 
+	money advance. A traditional lender will issue you a check, while online 
+	companies line the cash to your bank checking account. Your repayment will 
+	be anticipated in the next short term, or you can prolong the loan for 
+	longer by paying additional fees.<br>
+	<br>
+	Payday Fees<br>
+	<br>
+	Payday loan lenders demand fees exactly like any financing company. Fees 
+	include a process cost and interest. To create comparability shopping easy, 
+	the federal government requires lenders to create an APR, which includes 
+	both fees and interest. This is actually the rate you&#39;ll pay if you kept the 
+	loan out for a whole year.<br>
+	<br>
+	If you compare the APR of an online payday loan to a home loan, you will 
+	notice an enormous difference. However, payday loans are only intended to be 
+	taken for a couple of days, which means that your actual fees will be lower. 
+	The APR is still a good way to compare payday companies to find the best 
+	package.<br>
+	<br>
+	Online Payday Loan Lenders<br>
+	<br>
+	Payday loan lenders follow yet guidelines as traditional lenders, however, 
+	they enable you to apply anytime for an advance loan. They also copy your 
+	cash electronically, which means you don’t have to hassle with assessments 
+	and vacations to the bank.<br>
+	<br>
+	Some online lenders also offer better discounts, especially for first-time 
+	borrowers. They could waive fees or offer reduced rates. It pays to look at 
+	several different websites to find the most affordable fees for your money 
+	advance. <br>&nbsp;</div>
+ 
+</div>
 </body>
 
 </html>
