--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     <a href="https://loansolo.com/?aid=7378"><img src="loansolo.png" width="300" height="250" alt="Instant Same Day Payday Loans Online California">
 	</a></div>
   <div class="block1">
-    An online payday loan allows consumers to borrow up to $1000, depending on 
-	their state’s regulations and the consumer’s monthly income. Payday loans 
-	are designed to be short-term loans, helping complete a financial crisis 
-	until the next payday. Online payday loan companies add convenience to the 
-	process.<br>
+    &nbsp; Instant same-day payday loans online in California allow consumers to 
+	borrow up to $1000, depending on their state’s regulations and the 
+	consumer’s monthly income. Payday loans are designed to be short-term loans, 
+	helping complete a financial crisis until the next payday. Online payday 
+	loan companies add convenience to the process.<br>
 	<br>
-	PAYDAY LOAN Process <br>
-		<p><a href="https://loansolo.com/?aid=7378">Apply a Loan Online Click Here</a></p>
+	PAYDAY LOAN Process<br><p><a href="https://loansolo.com/?aid=7378">Apply a Loan Online Click Here</a></p>
 	<br>
 	Once you&#39;ve found an online payday loan company, you&#39;ll need to fill out an 
 	application that includes your contact information and monthly income. You 
@@ -51,10 +50,10 @@
 	Payday Fees<br>
 	<br>
 	Payday loan lenders demand fees exactly like any financing company. Fees 
-	include a process cost and interest. To create comparability shopping easy, 
-	the federal government requires lenders to create an APR, which includes 
-	both fees and interest. This is actually the rate you&#39;ll pay if you kept the 
-	loan out for a whole year.<br>
+	include a process cost and interest. To make comparability shopping easy, 
+	the federal government requires lenders to create an APR, including fees and 
+	interest. This is actually the rate you&#39;ll pay if you kept the loan out for 
+	a whole year.<br>
 	<br>
 	If you compare the APR of an online payday loan to a home loan, you will 
 	notice an enormous difference. However, payday loans are only intended to be 
@@ -64,15 +63,17 @@
 	<br>
 	Online Payday Loan Lenders<br>
 	<br>
-	Payday loan lenders follow yet guidelines as traditional lenders, however, 
-	they enable you to apply anytime for an advance loan. They also copy your 
-	cash electronically, which means you don’t have to hassle with assessments 
-	and vacations to the bank.<br>
+	Instant same-day payday loans lenders online in California follow yet 
+	guidelines as traditional lenders, however, they enable you to apply anytime 
+	for an advance loan. They also copy your cash electronically, which means 
+	you don’t have to hassle with assessments and vacations to the bank.<br>
 	<br>
 	Some online lenders also offer better discounts, especially for first-time 
 	borrowers. They could waive fees or offer reduced rates. It pays to look at 
 	several different websites to find the most affordable fees for your money 
-	advance. <br>&nbsp;</div>
+	advance.<br>
+		<p><a href="https://loansolo.com/?aid=7378">Apply a Loan Online Click Here</a></p>
+	</div>
  
 </div>
 </body>
