--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+  <?xml version="1.0" encoding="UTF-8"?>
+    <!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-418681-48"></script>
@@ -10,14 +10,14 @@
 
   gtag('config', 'UA-418681-48');
 </script>
- <meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width; initial-scale=1.0;">
 <meta http-equiv="Content-Type" content="text/html;  charset=utf-8">
 <title>Instant Same Day Payday Loans Online California</title>
 <Meta name="description" Content="" />
 <meta name="keywords" content=" " />
 <link rel="canonical" href="https://www.loanonline.us/">
 <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+ </head>
 
 <body>
 <h1>Instant Same Day Payday Loans Online California</h1>
